refactor(portal): 重构用户和菜单相关功能
- 修改用户和菜单的 pcode 字段类型，从 Long 改为 String
- 优化用户登录和获取信息的逻辑
- 调整菜单查询条件和排序方式
- 更新相关实体类和 VO 类的字段